--- a/locale/ro/LC_MESSAGES/django.po
+++ b/locale/ro/LC_MESSAGES/django.po
@@ -854,8 +854,8 @@ msgstr "f'Mulţumim pentru mesaj {message_author}! Vom răspunde cât putem de r
 msgid "Over 50 athletes"
 msgstr "Peste 50 de sportivi"
 #: services/templates/services/about.html:853
-msgid "Four groups"
-msgstr "Doi sensei - Petre Cătălin - 3 dan, Czoguly Karoly - 1 dan"
+msgid "Four student groups"
+msgstr "Patru grupe de studenţi"
 #: services/templates/services/about.html:853
 msgid "Two trainers - Sensei Petre Cătălin - 3 dan, Czoguly Karoly - 1 dan"
 msgstr "Doi antrenori - Sensei Petre Cătălin - 3 dan, Czoguly Karoly - 1 dan"
